# rust-prac

./: .gitignore  AGENTS.md  README.md
.github/workflows/: rust.yml
actix-gcd/: Cargo.toml  README.md
actix-gcd/src/: main.rs
hello-koma/: Cargo.toml
hello-koma/src/: README.md  main.rs  parser.rs
wasm-calculator/: README.md  index.html  main.js  test_main.js
wasm-calculator/calc/: Cargo.toml
wasm-calculator/calc/src/: lib.rs
weather-animation/: index.html
weather-app/: README.md
weather-app/backend/: .env  Cargo.toml
weather-app/backend/src/: main.rs
weather-app/frontend/: package-lock.json  package.json  tailwind.config.js
weather-app/frontend/src/app/: layout.tsx  page.tsx
weather-app/frontend/src/components/: ClientWeatherApp.tsx  RainyWeather.tsx  SnowyWeather.tsx  SunnyWeather.tsx  WeatherCard.tsx  WeatherDisplay.tsx  WindyWeather.tsx
